hyc-examples/tests/variables/invalid/missing-operator-def.hyc
full_name: str "John Doe";
